myK8S/vikunja/vikunja-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.3.0
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: vikunja-storage
              mountPath: /data
      volumes:
        - name: vikunja-storage
          persistentVolumeClaim:
            claimName: vikunja-pvc
