myK8S/vikunja/vikunja-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-service
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: vikunja
  ports:
    - name: http
      port: 3456
      targetPort: 3456
